--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -19,7 +19,7 @@ $selectors: selector.parse(
 // Theming
 $border-radius: radius(lg) !default;
 $font-size: font(sm) !default;
-$font-weight: font(medium) !default;
+$font-weight: font(semibold) !default;
 $leading: text-leading(sm) !default;
 $padding-x: spacing(16) !default;
 $padding-y: spacing(8) !default;
