--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -67,8 +67,7 @@ $_type-base-index: list.index($_type-steps, 'md');
   h5,
   h6 {
     color: fill(config.$headings-color);
-    font-family: config.$base-font-family;
-    // font-family: font(headings);
+    font-family: font(headings);
     font-weight: font-weight(config.$headings-font-weight);
   }
 
