--- a/scss/utilities/_filters.scss
+++ b/scss/utilities/_filters.scss
@@ -26,7 +26,7 @@ $utilities: (
     property: filter,
     class: blur,
     pseudos: hover focus,
-    default: setting(fallbacks, blur),
+    default: config.default(blur),
     values: $blurs,
   ),
 );
